global saving of edits
